# aas-hackaschool

./: .gitignore  AAS.postman_collection.json  README.md  default.env  docker-compose.basyx.yml  docker-compose.iot.yml
aasx/: Spruik_AID.aasx
basyx/: aas-env.properties
img/: overview.drawio
tb-gateway-hackathon/: Dockerfile  supervisord.conf
tb-gateway-hackathon/tb_gateway_controller/: .gitignore  pyproject.toml
tb-gateway-hackathon/tb_gateway_controller/tb_gateway_controller/: main.py  utils.py
tb-gateway-hackathon/tb_gateway_controller/tb_gateway_controller/aas/: api.py  models.py  utils.py
tb-gateway-hackathon/tb_gateway_controller/tb_gateway_controller/aas/aid/: models.py
tb-gateway-hackathon/tb_gateway_controller/tb_gateway_controller/aas/dnp/: models.py
tb-gateway-hackathon/tb_gateway_controller/tb_gateway_controller/gateway/: config_writer.py  models.py
tb-gateway-hackathon/tb_gateway_controller/tb_gateway_controller/gateway/templates/: tb_gateway.json.template  tb_gateway_mqtt.json.template
